# MARS2023

./: .gitignore  package.xml
Roboclaw/: input_test.py
catkin_ws/: frames.gv
catkin_ws/devel/: .catkin  .rosinstall  (+1 more)
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/config/: mapper_params_online_async.yaml
catkin_ws/src/localization_data_pub/: package.xml
catkin_ws/src/mars_2dnav/: CMakeLists.txt  blank_map.pgm  blank_map.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mars_configuration.launch  mars_configuration.launch.save  mars_nav.launch  move_base.launch  package.xml
catkin_ws/src/mars_robot/config/: mapper_params_online_async.yaml
catkin_ws/src/mars_robot/description/: lidar.xacro  rover_core.xacro
catkin_ws/src/mars_robot_drivers/scripts/: actuator_driver.py  actuator_wrapper.py  digging_autonomy.py  digging_locomotion_driver.py  digging_locomotion_wrapper.py  digging_relay.py  dumping_driver.py  dumping_wrapper.py  pitch_angle.txt  roboclaw.py  tool_driver.py
catkin_ws/src/mars_robot_launch/: .mars_robot_params.yaml.swo  mars_robot_launch.launch  mars_robot_params.yaml  slam_robot_launch.launch  test.launch
catkin_ws/src/mars_robot_msgs/msg/: sensor_msg.msg
catkin_ws/src/mars_robot_teleop/scripts/: mars_robot_pynput.py  mars_robot_teleop.py
catkin_ws/src/odrive_ros/launch/: odrive.launch
catkin_ws/src/odrive_ros/src/odrive_ros/: odrive_interface.py  odrive_node.py
digging/: stepper_manual_position_test_1.py  stepper_manual_velocity_test_1.py
locomotion/: Loco_test.py
robot_setup_tf/: package.xml
(+71 files in other folders)
